# RC

./: .gitignore  README.md  blog.html  bot-knowledge.html  bot.html  index.html  package.json  pnpm-lock.yaml  post-houston-2025.html  post-houston-q4-2025-market-update.html  start-server.bat  tsconfig.json
marketing-bot/: .env.example  .gitignore  README.md  pyproject.toml
marketing-bot/seeds/: brand_guidelines.json  firm_data.json  market_data.json  seed_knowledge_base.py
marketing-bot/src/: cli.py  config.py
marketing-bot/src/agents/: base_agent.py  blog_agent.py  linkedin_agent.py  market_report_agent.py  orchestrator.py  scanner_agent.py  twitter_agent.py
marketing-bot/src/db/: database.py  knowledge_base.py  models.py  schema.sql
marketing-bot/src/integrations/: claude_client.py  linkedin_api.py  twitter_api.py
marketing-bot/src/pipeline/: content_pipeline.py  data_ingestion.py  publisher.py
marketing-bot/src/prompts/: brand_voice.py  system_prompts.py  templates.py
marketing-bot/src/web/: __init__.py  app.py
marketing-bot/src/web/static/: style.css
marketing-bot/src/web/templates/: accounts.html  base.html  calendar.html  content.html  dashboard.html  digest.html  digests.html  generate.html  inspiration.html  knowledge_base.html  (+1 more)
marketing-bot/tests/: conftest.py  test_blog_agent.py  test_brand_compliance.py  test_cli.py  test_data_ingestion.py  test_database.py  test_inspiration.py  test_linkedin_agent.py  test_market_report.py  test_orchestrator.py  test_pipeline.py  test_publisher.py  test_scanner.py  test_twitter_agent.py  test_web_app.py
(+16 files in other folders)
